syntax = "proto3";

package todo;

option go_package = "./pb";

service TodoService {
  rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse);
  rpc GetTodo (GetTodoRequest) returns (GetTodoResponse);
};

message CreateTodoRequest {
  int32 id = 1;
  string content = 2;
  bool isDone = 3;
};

message CreateTodoResponse {
  int32 id = 1;
};

message GetTodoRequest {
  int32 id = 1;
};

message GetTodoResponse {
  int32 id = 1;
  string content = 2;
  bool isDone = 3;
};